almost there on ie bugs

--- a/cog/static/cog/css/cogstyle.css
+++ b/cog/static/cog/css/cogstyle.css
@@ -411,8 +411,8 @@ input[type=text] {
 }
 
 .ie9 input[type=text] {
-width: inherit;
-color: red;
+width: 99%;
+/*debug ... color: red; */
 }
 
 
